244Initials/force-app/main/default/objects/Quote/fields/ARTL_AnnualRecurringTotal2__c.field-meta.xml
<CustomField>
    <fullName>ARTL_AnnualRecurringTotal2__c</fullName>
    <label>Parent Quote Annual Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>