244Initials/force-app/main/default/objects/Quote/fields/ARTL_AnnualRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>ARTL_AnnualRecurringTotal__c</fullName>
    <label>Annual Recurring Total</label>
    <summarizedField>QuoteLineItem.Annual_Recurring_Total__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>