244Initials/force-app/main/default/objects/Quote/fields/LBPCity__c.field-meta.xml
<CustomField>
    <fullName>LBPCity__c</fullName>
    <label>LBPCity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>